# lua-vosk

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh
.github/workflows/: build.yml
docs/: mkdocs.yml  run.bat
docs/docs/: Library.md  Library.ru.md  index.md  index.ru.md
docs/docs/Classes/: Model.md  Model.ru.md  Recognizer.md  Recognizer.ru.md  SpeakerModel.md  SpeakerModel.ru.md
misc/: TC-linux-arm64.cmake  TC-linux-x64.cmake  TC-win-x64.cmake  build-linux-arm64.sh  build-linux-x64.sh  build-win-x64.sh  init.sh
rockspecs/: lua-vosk-1.0-1.rockspec  lua-vosk-1.2-1.rockspec  lua-vosk-1.3-6.rockspec
src/: backend.c  backend.h  core.h  luahelp.c  luahelp.h  luamodel.c  luamodel.h  luarecognizer.c  luarecognizer.h  luaspkmodel.c  luaspkmodel.h  luavosk.def  main.c  main.h  voskbridge.c  voskbridge.h  vosksymbols.h
src/backends/: unix.c  windows.c
test/: main.lua
test/webexample/: main.lua
